compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__variables__anon_external_fun_name_escaping.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/variables.rs
assertion_line: 70
expression: "\n@external(erlang, \"one.two\", \"three.four\")\nfn func() -> Nil\n\npub fn main() {\n  func\n}"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one.two", "three.four")
fn func() -> Nil

pub fn main() {
  func
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 5).
-spec main() -> fun(() -> nil).
main() ->
    fun 'one.two':'three.four'/0.
