compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__variables__blocks_are_scopes.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/variables.rs
assertion_line: 100
expression: "\npub fn main() {\n  let x = 1\n  {\n    let x = 2\n  }\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let x = 1
  {
    let x = 2
  }
  x
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    X = 1,
    begin
        X@1 = 2
    end,
    X.
