compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__variables__discarded.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/variables.rs
assertion_line: 58
expression: "pub fn go() {\n  let _r = 1\n  let _r = 2\n  Nil\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go() {
  let _r = 1
  let _r = 2
  Nil
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> nil.
go() ->
    _ = 1,
    _ = 2,
    nil.
