compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__variables__shadow_param.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/variables.rs
assertion_line: 23
expression: "pub fn main(board) {\nfn(board) { board }\n  board\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(board) {
fn(board) { board }
  board
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 1).
-spec main(I) -> I.
main(Board) ->
    fun(Board@1) -> Board@1 end,
    Board.
