compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__variables__shadow_pipe.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/variables.rs
assertion_line: 45
expression: "\npub fn main(x) {\n  x\n  |> fn(x) { x }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  x
  |> fn(x) { x }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(K) -> K.
main(X) ->
    _pipe = X,
    _pipe.
